# test_tg_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yml  main.py  pyproject.toml
app/: commands.py  config.py  schemas.py  states.py
app/db/: connection.py  note.py  query_getter.py  user.py
app/db/sql/note/: create.sql  list.sql  list_range.sql  update_notification_sent.sql  update_reminder_time.sql  update_text.sql
app/db/sql/user/: create.sql  get.sql  update_email.sql  update_name.sql
app/handlers/: __init__.py  buttons.py  note.py  start.py
app/reminder/: worker.py
migrations/: changelog.xml
migrations/sql/: init.sql
