[tool.poetry]
name = "notification-telegram-bot"
version = "0.1.0"
description = "Test for treebo"
authors = ["Artem Skachkov <topkzzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
asyncpg = "^0.29.0"
Telethon = "^1.36.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
aiogram-calendar = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"
deptry = "^0.18.0"
pytest = "^8.3.2"
aiogram-tests = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = 'py310'
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
]
